# Sistemas_RTOS

./: README.md  minicom b 115200 o D.txt
Pratica02/: CMakeLists.txt
Pratica02/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
Pratica05/: CMakeLists.txt  main.c
Pratica05/sergin/: CMakeCache.txt  Makefile  cmake_install.cmake
Pratica05/sergin/FREERTOS_KERNEL/: Makefile
Pratica05/sergin/pico-sdk/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/docs/: Makefile
Pratica05/sergin/pico-sdk/src/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/src/common/boot_picobin_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/boot_picoboot_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/boot_uf2_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/hardware_claim/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_base_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_binary_info/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_bit_ops_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_divider_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/src/common/pico_sync/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_time/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile
Pratica05/sergin/pico-sdk/src/common/pico_util/: Makefile
Pratica05/sergin/pico-sdk/src/rp2040/boot_stage2/: Makefile
Pratica05/sergin/pico-sdk/src/rp2040/hardware_regs/: Makefile
Pratica05/sergin/pico-sdk/src/rp2040/hardware_structs/: Makefile
Pratica05/sergin/pico-sdk/src/rp2040/pico_platform/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_adc/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_base/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_clocks/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_divider/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_dma/: Makefile
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
Pratica05/sergin/pico-sdk/src/rp2_common/hardware_flash/: Makefile
Pratica05/sergin/pico-sdk/tools/: Makefile
Pratica05/sergin/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
Pratica05/sergin/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
Pratica06/: CMakeLists.txt  main.c
(+351 files in other folders)
